# SpiderChat

./: .gitignore  CMakeLists.txt  README.md
Logger/include/: Logger.hpp
Logger/src/: Logger.cpp
UI/: UI.hpp
UI/ConsoleUI/: ConsoleUI.cpp  ConsoleUI.hpp
client/: client.cpp
server/: main.cpp
server/include/: ChatServer.hpp  ChatSession.hpp
server/src/: ChatServer.cpp  ChatSession.cpp
